2009-08-11  Elliott Baron  <ebaron@redhat.com>

	* META-INF/MANIFEST.MF: Bump version to 0.3.0.

2009-08-07  Andrew Overholt  <overholt@redhat.com>

	* plugin.properties: Change provider from Eclipse.org to Eclipse.

2009-07-30  Elliott Baron  <ebaron@redhat.com>

	* src/org/eclipse/linuxtools/profiling/launch/Messages.java: Removed.
	* src/org/eclipse/linuxtools/profiling/launch/messages.properties: Removed.
	* src/org/eclipse/linuxtools/profiling/launch/ProfileLaunchPlugin.java: Removed.
	* src/org/eclipse/linuxtools/internal/profiling/launch/Messages.java: New file.
	* src/org/eclipse/linuxtools/internal/profiling/launch/messages.properties: New file.
	* src/org/eclipse/linuxtools/internal/profiling/launch/ProfileLaunchPlugin.java: New file.
	* .project: Enabled API analysis.
	* META-INF/MANIFEST.MF: Export internal package.
	* src/org/eclipse/linuxtools/profiling/launch/ProfileLaunchShortcut.java (findLaunchConfiguration): Replace deprecated method calls. 

2009-04-03  Elliott Baron  <ebaron@redhat.com>

	* META-INF/MANIFEST.MF: 0.2.0 version.

2009-01-05  Elliott Baron  <ebaron@redhat.com>

	* META-INF/MANIFEST.MF: Changed version to 0.1.0.
	* build.properties: Include about.html.